<resources>
    <string name="app_name">Dayton</string>
    <string name="clue_update_dialog">Clue Update:</string>
    <string name="update">Update</string>
    <string name="cancel_update">Cancel</string>
    <string name="login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="forget_password_change">Change Password</string>
    <string name="forget_password_edit_hint">Your Email</string>
    <string name="forget_password_dialog_text">Please wait…</string>
    <string name="save_failed_prompt">Save failed...</string>
    <string name="forget_password_request_null">Couldn\'t change password</string>
    <string name="change_password_fail">Change password failed</string>
    <string name="password_password_changed">Password changed</string>
    <string name="email_is_error">Your email does not exist</string>
    <string name="forget_password_dec">Please fill in your e-mail to set a \n new password</string>
    <string name="forget_new_password">New password</string>
    <string name="forget_repeat_password">Confirm new password</string>
    <string name="change_password_error">Passwords don\'t match with each other.</string>
    <string name="change_password_forget_password_error">Change password failed</string>
    <string name="register_email"> Register with your email</string>
    <string name="third_party_login">Or register with your social media</string>
    <string name="login_success_toast_text">Logged in!</string>
    <string name="login_failed_toast_text">Failed to login</string>
    <string name="tips_user_account_password">Email must not be empty</string>
    <string name="tips_user_password">Password must not be empty</string>
    <string name="register_account_email_error">Email already exist</string>
    <string name="register_email_format_error">Invalid Email format</string>
    <string name="network_error_register_email_account">Cannot connect to the server.Try again later.</string>
    <string name="user_account_error">Account of password is incorrect.</string>
    <string name="user_info_clue">Tell us little bit about your self.</string>
    <string name="user_info_share">We promise, we will never share this information</string>
    <string name="user_sex_female">Female</string>
    <string name="user_sex_male">Male</string>
    <string name="user_info_birthday">Birth</string>
    <string name="user_info_height">Height</string>
    <string name="user_info_weight">Weight</string>
    <string name="user_device_select">Setting up your device.</string>
    <string name="user_select_dec">Don\'t have a device here?</string>
    <string name="select_device_pair_later_text">Pair later</string>
    <string name="user_device_drone"></string>
    <string name="user_info_activity_edit_first_name_hint">First Name</string>
    <string name="user_info_activity_edit_last_name_hint">Last Name</string>
    <string name="user_step_goal">Goal:</string>
    <string name="user_login_dialog_text">Logging in...</string>
    <string name="user_info_first_name_error">First name may not be empty</string>
    <string name="user_info_birthday_error">Birthday may not be empty</string>
    <string name="user_info_weight_error">Weight may not be empty</string>
    <string name="user_info_height_error">Length may not be empty</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="retry_connecting">Retry</string>
    <string name="watch_name">Dayton Watch</string>
    <string name="watch_version">version 1.0.3</string>
    <string name="watch_bluetooth_id">IMEI 156420156233</string>
    <string name="connecting_fail">Fail</string>
    <string name="start_smart_watch">Open</string>
    <string name="home_guide_clock">WORLD\n\tCLOCK</string>
    <string name="home_guide_analysis">ANALYSIS</string>
    <string name="home_guide_setting">WATCH\n\tSETTING</string>
    <string name="home_guide_profile">Profile</string>
    <string name="home_title_back_text">Back</string>
    <string name="home_content_activity_progress_middle_dec">SLEEP</string>
    <string name="home_title_save_text">Save</string>
    <string name="profile_title_back_text">Cancel</string>
    <string name="fragment_home_title_calories">CALORIES</string>
    <string name="fragment_home_title_active_time">ACTIVE TIME</string>
    <string name="fragment_home_title_kilometer">KM</string>
    <string name="fragment_home_guide_see_history_dec">See your previous activities</string>
    <string name="fragment_home_guide_see_data_dec">Here is your data from Dayton</string>
    <string name="fragment_home_guide_meter_dec">Click the dashboard to see floors</string>
    <string name="fragment_home_guide_histogram_dec">The bar graph will presenting your activities durations</string>
    <string name="choose_activity_title_choose_city_tv">Choose a City</string>
    <string name="choose_activity_title_cancel">Cancel</string>
    <string name="add_city_toast_text">World clock is limited by 5 clocks.</string>
    <string name="world_clock_add_city_error">Failed,Clock existed</string>
    <string name="no_search_result">Did not find the city</string>
    <string name="gallery_activity_title">GALLERY</string>
    <string name="world_clock_title_text">World Clock</string>
    <string name="world_clock_setting_title">Time Setting</string>
    <string name="world_clock_adapter_home_time">Home Time</string>
    <string name="world_clock_adapter_world_time">World Time</string>
    <string name="world_clock_Yesterday_tv">Yesterday</string>
    <string name="world_clock_today_tv">Today</string>
    <string name="world_clock_Tomorrow_tv">Tomorrow</string>
    <string name="world_clock_city_time_difference_behind">hours behind</string>
    <string name="world_clock_city_time_difference_ahead">hours ahead</string>
    <string name="world_add_city_prompt">Add up to five cities</string>
    <string name="world_clock_search_city_hint">Search</string>
    <string name="world_clock_settings">Settings</string>
    <string name="profile_activity_user_goal">Goal:</string>
    <string name="profile_bottom_tv">GOAl NOTIFICATION </string>
    <string name="profile_edit_prompt">edit</string>
    <string name="profile_user_weight_unit">Kg</string>
    <string name="profile_user_height_unit">cm</string>
    <string name="profile_edit_email_prompt">Mailbox cannot be edited</string>
    <string name="profile_prompt_user_edit">Enter the space, the success of the editorial department</string>
    <string name="profile_email_format_error_prompt">Mailbox format is not correct</string>
    <string name="profile_user_height_error">illegal input</string>
    <string name="profile_dialog_log_out_prompt">Log Out</string>
    <string name="profile_dialog_log_out_message">Are you sure you want to log out?</string>
    <string name="profile_dialog_positive_button_text">Sure</string>
    <string name="profile_dialog_negative_button_text">Cancel</string>
    <string name="profile_save_text_dec">No Watch\nConnected</string>
    <string name="profile_birthday_dec">Birthday :</string>
    <string name="add_watch_activity_watch_dec_is_connected">Not Connected</string>
    <string name="add_watch_activity_content_contacts_notification">Contacts Notifications</string>
    <string name="add_watch_activity_content_my_notification">My Notifications</string>
    <string name="add_watch_activity_content_forget_watch">Forget This Watch</string>
    <string name="add_watch_activity_watch_dec">Dayton Smartwatch</string>
    <string name="add_watch_activity_prompt_user">HOLD YOUR Smartwatch!</string>
    <string name="add_watch_activity_prompt_user_one">It appears that you haven\'t </string>
    <string name="add_watch_activity_prompt_user_two">connected a device yet.</string>
    <string name="add_watch_activity_prompt_user_three">Perhaps you\'d like to</string>
    <string name="add_watch_activity_prompt_user_four">purchase one…</string>
    <string name="add_watch_activity_shop_address"></string>
    <string name="add_watch_activity_shop_address_path"></string>
    <string name="add_watch_connected">Connected</string>
    <string name="add_watch_disconnected">Disconnected</string>
    <string name="add_watch_damaged">Damaged</string>
    <string name="add_watch_calculating">Calculating</string>
    <string name="add_watch_charging">Charging</string>
    <string name="add_notification_account_toast">You can only add 10 contacts</string>
    <string name="in_app_notification_found_watch">Found watch!</string>
    <string name="in_app_notification_bluetooth_disabled">Bluetooth is disabled. Enable Bluetooth.</string>
    <string name="in_app_notification_watch_disconnected">Watch disconnected.</string>
    <string name="in_app_notification_searching">Searching for watch…</string>
    <string name="in_app_notification_gps_disable">GPS is disabled,Enable GPS.</string>
    <string name="in_app_notification_gps_permission">Location permission is not granted,please allow it.</string>
    <string name="in_app_notification_dialog_button_text">Settings</string>
    <string name="show_watch_failed_searching">Failed searching for devices.</string>
    <string name="show_watch_connected">Connected</string>
    <string name="register_table_email">Email</string>
    <string name="register_table_password">Password</string>
    <string name="add_watch_watches">Watch</string>
    <string name="activities_last_week">LAST WEEK</string>
    <string name="activities_this_week">THIS WEEK</string>
    <string name="activities_prompt_use_data_updated_time">Historical data including calories,active time and KM will be updated every 5 minutes.</string>
    <string name="activities_last_30_days">LAST 30 DAYS</string>
    <string name="activities_steps">STEPS</string>
    <string name="activities__0">0</string>
    <string name="notifications_the_idea">The Idea</string>
    <string name="notifications_explanation">Don\'t want to be notified by everyone on your\nwatch? Just add the contacts you want to get\nnotified by pressing on the plus button!</string>
    <string name="notifications_explenation_2">Getting annoyed by an added contact? Just swipe to the\nright to delete him or her!</string>
    <string name="watch_info_connection_state">Connection state:</string>
    <string name="watch_info_version">Version:</string>
    <string name="watch_info_battery_state">Battery state:</string>
    <string name="notifications_contacts_notifications">Contacts Notifications</string>
    <string name="notifications_notifications">Notifications</string>
    <string name="world_clock_setting_fragment_explain">ANALOG TIME DISPLAY</string>
    <string name="world_clock_setting_fragment_calibration">CALIBRATION</string>
    <string name="world_clock_setting_fragment_recalibrate_hands">Recalibrate Hands</string>
    <string name="world_clock_setting_sync_time">Analog Time Syncing</string>
    <string name="world_clock_setting_24h_format">24 Hour Format</string>
    <string name="world_clock_syncing_time_type_tv">Sync Time</string>
    <string name="world_clock_syncing_time_setting_describe">Sync the time of your watch with local or home time If you don\'t turn on Analog Time Syncing, the time on your watch will never change.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="snooze">Snooze</string>
    <string name="ota_tip_infomation">Hold the watch close to the phone,don\'t\nclose the app and be patience.</string>
    <string name="ota_version">Current: %1$s, New: %2$s</string>
    <string name="ota_status_ready">Ready to perform.</string>
    <string name="ota_status_start">Start</string>
</resources>