<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/notification_bg_color"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:text="@string/world_clock_setting_fragment_explain"
        android:textColor="@color/home_list_adapter_item_tv_color"
        android:textSize="18dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_info_sex_bg"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/world_clock_setting_sync_time"
                android:textColor="@android:color/white"
                android:textSize="18dp"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/world_clock_setting_syncing_time_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/notification_bg_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/world_clock_syncing_time_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/world_clock_syncing_time_type_tv"
                android:textColor="@color/profile_user_bg"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/world_clock_syncing_time_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/world_clock_adapter_home_time"
                android:textColor="@color/profile_user_bg"
                android:textSize="18dp"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/notification_bg_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/world_clock_setting_24h_format"
                android:textColor="@android:color/white"
                android:textSize="18dp"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/world_clock_setting_24h_format_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:text="@string/world_clock_setting_fragment_calibration"
        android:textColor="@color/home_list_adapter_item_tv_color"
        android:textSize="18dp"
        />
    <RelativeLayout
        android:id="@+id/time_setting_calibrate_hands_layout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/user_info_sex_bg"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/world_clock_setting_fragment_recalibrate_hands"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_arrow_1"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/world_clock_syncing_time_setting_describe"
        android:textColor="@color/login_text_color"
        android:textSize="16dp"/>

</LinearLayout>