<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:paddingTop="25dp"
              android:background="@android:color/white"
              android:layout_height="match_parent">
    <include layout="@layout/register_control_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>
    <ImageView
        android:id="@+id/tutorial_drone_logo"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/dronelogo"/>
    <LinearLayout
        android:id="@+id/register_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/register_edit_bg"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/change_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:textColor="#88000000"
            android:hint="@string/forget_new_password"
            android:textColorHint="#88000000"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#000000"/>

        <EditText
            android:id="@+id/repeat_edit_password_ed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/forget_repeat_password"
            android:textColor="#88000000"
            android:textColorHint="#88000000"
            android:inputType="textPassword"
            android:paddingRight="5dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/forget_activity_change_password_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textColor="@color/user_info_sex_bg"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:text="@string/forget_password_change"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/forget_password_dec"/>
</LinearLayout>